<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="question">Вопрос:</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="night_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="write_in_support">Написать в подержку</string>
    <string name="media_activity">Media Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="subject_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>"
    <string name="email">vadim3@mail.ru</string>
    <string name="error_mail">Невозможно открыть приложение для отправки письма</string>
    <string name="uri_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="course_android_developer">https://practicum.yandex.ru/android-developer/</string>
    <string name="error_user_agreement">Браузер не найден</string>
    <string name="empty_stroke"></string>
    <string name="empty_search_result">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью \n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="downloading_failed">Загрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="Reload">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="remove_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_duration">00:00</string>
</resources>