<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_BTN"
            style="@style/ClickableIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="12dp"
            android:src="@drawable/arrow_left_alt_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/yandexsans"
            android:padding="12dp"
            android:text="@string/settings"
            android:textColor="@color/dark_gey"
            android:textFontWeight="500"
            android:textSize="22sp" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonSettings"
        android:background="@color/white"
        android:text="@string/night_mode"
        android:checked="true" />

    <Button
        android:id="@+id/shareUp_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonSettings"
        android:text="@string/write_in_support"
        app:icon="@drawable/share_ico" />

    <Button
        android:id="@+id/support_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonSettings"
        android:text="@string/write_in_support"
        app:icon="@drawable/support_ico" />

    <Button
        android:id="@+id/userAgreement_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonSettings"
        android:text="@string/user_agreement"
        app:icon="@drawable/forwardarrow_ico" />

</LinearLayout>