<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.AudioPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/indent_big" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/indent_big" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar_BTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_left_alt_24"
            app:title=""
            app:titleTextAppearance="@style/ToolBarTextAppearance" />

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_max="500dp"
            android:layout_marginTop="@dimen/indent_big"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/toolBar_BTN" />

        <TextView
            android:id="@+id/tv_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_big"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Yrgrgerg dff"
            android:textAppearance="@style/TextAppearanceTitle1"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/album_cover" />

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_middle_compact"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Grg rge"
            android:textAppearance="@style/TextAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_track_name" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/indent_big_super"
            android:focusable="true"
            android:clickable="true"
            app:rippleColor="@color/surfacePrimary"
            android:background="@color/transparent"
            android:elevation="2dp"
            android:src="@drawable/ico_button_play"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_artist_name" />

        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@color/transparent"
            android:src="@drawable/ico_button_add"
            app:layout_constraintBottom_toBottomOf="@+id/btn_play"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/btn_play" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@color/transparent"
            android:src="@drawable/ico_button_favorite_inactive"
            app:layout_constraintBottom_toBottomOf="@+id/btn_play"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="@+id/btn_play" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_extra_small"
            android:text="@string/zero_duration"
            android:textAppearance="@style/TextAppearanceBody2.Bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_play" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/tv_duration_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_duration,tv_duration_value" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/duration"
            android:textAppearance="@style/TextAppearanceBody3.Light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/tv_duration_value"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_timer" />

        <TextView
            android:id="@+id/tv_duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textAppearance="@style/TextAppearanceBody3.Dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_duration"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_duration"
            app:layout_constraintTop_toTopOf="@+id/tv_duration" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_album,tv_album_value" />

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_middle"
            android:text="@string/album"
            android:textAppearance="@style/TextAppearanceBody3.Light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@id/tv_album_value"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/tv_album_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="урgbtbrtbrрррtbtr000"
            android:textAppearance="@style/TextAppearanceBody3.Dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_album"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_album"
            app:layout_constraintTop_toTopOf="@+id/tv_album" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/year_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_year,tv_year_value" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_middle"
            android:text="@string/year"
            android:textAppearance="@style/TextAppearanceBody3.Light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@id/tv_year_value"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_album" />

        <TextView
            android:id="@+id/tv_year_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="урgbtbrtbrtbtr"
            android:textAppearance="@style/TextAppearanceBody3.Dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_year"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_year"
            app:layout_constraintTop_toTopOf="@+id/tv_year" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/genre_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_genre,tv_genre_value" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_middle"
            android:text="@string/genre"
            android:textAppearance="@style/TextAppearanceBody3.Light"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@id/tv_genre_value"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_year" />

        <TextView
            android:id="@+id/tv_genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="урgbtbrtbrtbtr"
            android:textAppearance="@style/TextAppearanceBody3.Dark"
            app:layout_constraintBottom_toBottomOf="@+id/tv_genre"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_genre"
            app:layout_constraintTop_toTopOf="@+id/tv_genre" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/country_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="tv_country,tv_country_value" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_middle"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearanceBody3.Light"
            app:layout_constraintEnd_toStartOf="@id/tv_country_value"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_country_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="урgbtbrtbrtbtr"
            android:textAppearance="@style/TextAppearanceBody3.Dark"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="@+id/tv_country"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_country"
            app:layout_constraintTop_toTopOf="@+id/tv_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>